--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
         <h3>Paris</h3>
         <p>
             paris is one of the most beautiful city i have ever seen and the place where 
-            my favorite Eiffil tower is present. And most commonly for me the paris is called as <b>city of love</b>where we will find ourself there and when ever i feel paris as <b>stress buster</b> right away jump to paris.
+            my favorite Eiffil tower is present. And most commonly for me the paris is called as <b>city of love</b> 
+            where we will find ourself there and when ever i feel paris as <b>stress buster</b> right away jump to paris.
         </p>
-
+        <hr>
+        <h3>favorite vacation spot</h3>
+        <ol>
+            <li>Eiffil Tower</li>
+            <li>pompidou center</li>
+            <li>Louvre Museum</li>
+        </ol>
     </body>
 </html>
 
