Added unordered list

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             <li>pompidou center</li>
             <li>Louvre Museum</li>
         </ol>
+        <ul>
+            <li>Escargot</li>
+            <li>Macarons</li>
+            <li>Dall Rice</li>
+        </ul>
     </body>
 </html>
 
