--- a/mystats.html
+++ b/mystats.html
@@ -13,7 +13,7 @@
             The main reason why i like  this is due to its masala and spiceness.
             There are many types in it like chicken,mutton and i most love mutton biryani from hyderbad pista house motel.
         </p>
-        <img src="C:\Users\s558922\OneDrive - nwmissouri.edu\Desktop\webapps-repo\44563-webapps-f23-assignment3-Attuluru\biryani.png" alt="Biryani Image">
+        <img src="C:\Users\s558922\OneDrive - nwmissouri.edu\Desktop\webapps-repo\44563-webapps-f23-assignment3-Attuluru\biryani.png" height="100" width="200" alt="Biryani Image">
         
 
     </body>
