--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li>Macarons</li>
             <li>Dall Rice</li>
         </ul>
+        <a href="https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-Attuluru/blob/main/mystats.html">mystats Git Link</a>
     </body>
 </html>
 
