Sports Table Creation

--- a/mystats.html
+++ b/mystats.html
@@ -8,13 +8,42 @@
             Hello, This is Akshay and I am from India.I am intrested in learning new things and exploring new places.
             I am basically want to see other happy or make other happy.
         </p>
-        <h3>Biryani</h3>
+        <h2>Biryani</h2>
         <p>
             The main reason why i like  this is due to its masala and spiceness.
             There are many types in it like chicken,mutton and i most love mutton biryani from hyderbad pista house motel.
         </p>
         <img src="C:\Users\s558922\OneDrive - nwmissouri.edu\Desktop\webapps-repo\44563-webapps-f23-assignment3-Attuluru\biryani.png" height="100" width="200" alt="Biryani Image">
-        
-
+        <hr>
+        <h2>Sports Section</h2>
+        <p>
+            Below table describes the sports that i would like to recommend and it conatins the data like 
+            Name of the sport and reason why you need to play and average hours you need to spend in the sport per week.
+        </p>
+        <table>
+            <th>Name of The sport</th>
+            <th>Reason why you need to take</th>
+            <th>HoursPerWeek</th>
+            <tr>
+                <td>Tennis</td>
+                <td>For relaxing Ourselves</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>chess</td>
+                <td>Its a mind game</td>
+                <td>14</td>
+            </tr>
+            <tr>
+                <td>Tabe Tennis</td>
+                <td>To decrease our pressure</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td>Golf</td>
+                <td>Its a rich game involing many techniques and ideas</td>
+                <td>15</td>
+            </tr>
+        </table>
     </body>
 </html>
