adding code snippet

--- a/mystats.html
+++ b/mystats.html
@@ -45,5 +45,16 @@
                 <td>15</td>
             </tr>
         </table>
+        <hr>
+        <h3>Code Snippet</h3>
+        <blockquote cite="https://stackoverflow.com/questions/69286462/how-to-add-some-space-for-my-button-layout">How to add some space for my button layout?</blockquote>
+        <a href="https://stackoverflow.com/questions/69286462/how-to-add-some-space-for-my-button-layout">Answer to the question from Stackoverflow</a>
+        <pre>
+            <button>
+                Some
+                <br>
+                Text
+              </button>
+        </pre>
     </body>
 </html>
