--- a/bonus.html
+++ b/bonus.html
@@ -13,6 +13,6 @@
         <li>Talented</li>
         <li>Time traveller</li>
     </ul>
-
+    <img src="C:\Users\s558922\OneDrive - nwmissouri.edu\Desktop\webapps-repo\44563-webapps-f23-assignment3-Attuluru\Alex.jpg" height="450" width="320">
 </body>
 </html>
