--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>BasicPage</title>
     </head>
     <body>
+        <a href="https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-Attuluru/blob/main/bonus.html">BONUS</a>
         <h1>Akshay Kumar Gupta Attuluru</h1>
         <h3>Paris</h3>
         <p>
