--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <h3>favorite vacation spot</h3>
         <ol>
             <li>Eiffil Tower</li>
+            <ol>
+                <li>tower of paris</li>
+                <li>popular tower</li>
+            </ol>
             <li>pompidou center</li>
             <li>Louvre Museum</li>
         </ol>
