--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li>Macarons</li>
             <li>Dall Rice</li>
         </ul>
-        <a href="mystats.html">mystats Git Link</a>
+        <a href="mystats.html">mystats.html</a>
     </body>
 </html>
 
