--- a/mystats.html
+++ b/mystats.html
@@ -20,7 +20,7 @@
             Below table describes the sports that i would like to recommend and it conatins the data like 
             Name of the sport and reason why you need to play and average hours you need to spend in the sport per week.
         </p>
-        <table>
+        <table border="12px">
             <th>Name of The sport</th>
             <th>Reason why you need to take</th>
             <th>HoursPerWeek</th>
