Added style to image

--- a/bonus.html
+++ b/bonus.html
@@ -13,6 +13,6 @@
         <li>Talented</li>
         <li>Time traveller</li>
     </ul>
-    <img src="Alex.jpg">
+    <img src="Alex.jpg" height="250" width="230">
 </body>
 </html>
