--- a/bonus.html
+++ b/bonus.html
@@ -13,6 +13,6 @@
         <li>Talented</li>
         <li>Time traveller</li>
     </ul>
-    <img src="Alex.jpg" height="250" width="230">
+    <img src="Alex.jpg" height="150 px" width="120 px">
 </body>
 </html>
