Added some links

--- a/bonus.html
+++ b/bonus.html
@@ -14,5 +14,6 @@
         <li>Time traveller</li>
     </ul>
     <img src="Alex.jpg" height="150 px" width="120 px">
+    <a href="index.html">INDEX</a>
 </body>
 </html>
