--- a/mystats.html
+++ b/mystats.html
@@ -50,12 +50,12 @@
         <blockquote cite="https://stackoverflow.com/questions/69286462/how-to-add-some-space-for-my-button-layout">How to add some space for my button layout?</blockquote>
         <a href="https://stackoverflow.com/questions/69286462/how-to-add-some-space-for-my-button-layout">Answer to the question from Stackoverflow</a>
         <pre>
-            <button>
+            &lt;button&gt;
                 Some
-                <br>
+                &lt;br&gt;
                 Text
-              </button> 
+                &lt;button&gt;
         </pre>
-        
+        <a href="https://css-tricks.com/snippets/html/button-with-line-breaks/">Snippet LINK</a>
     </body>
 </html>
